# pms4u

.github/workflows/: deploy-pms4u.yml
pms4u/: .dockerignore  .env.example  .gitignore  ARCHITECTURE_MAP_MASTER.md  Advisory_Summary.html  BPB_SHAP_Q1_2026_Report.md  CARSHUNTER_Architecture_Report.html  CARSHUNTER_Backend_Governance_Report.md  DNS_DEPLOYMENT_MAP.md  PLATFORM_AUTHORITY_MAP.md  PMS4U_EXECUTIVE_ARCHITECTURE.md  README.md  REPOSITORY_AUDIT.md  SOVEREIGN_STACK.md  WHITEPAPER.md  WORKSPACE_TECHNICAL_REPORT.html  carshunter.db  docker-compose.yml  generate_pdf.mjs  intake_app.py  interactive_stack.html  linkedin_presentation.html  next.config.ts  package-lock.json  package.json  patch_imports.py  patch_main_transitions.py  pms4u.code-workspace  start_dev.sh
pms4u/.github/: copilot-instructions.md
pms4u/app/: execusion.boundry.html  globals.css  layout.tsx  page.tsx
pms4u/app/yai/: page.tsx  (+1 more)
pms4u/archive/: CARSHUNTER_Pitch_Deck_DE.html  Omnibus_Session_Report.html  bpb_authority_mockup.html  bpb_portfolio.html  convergence_report.html  generate_flat_pdf.mjs  patch_main.py  patch_main_jsonl.py  research_lab.html  update_db.py
pms4u/audit/: db_files.txt
pms4u/bpb-engine/: package-lock.json  package.json  rules.json
pms4u/carshunter_app/: app.py  app_orchestrator.py  gtcs4u.com.index.html  test_constitutional_enforcement.py
pms4u/governance-sdk/: README.md  pyproject.toml
pms4u/governance-sdk/governance_sdk/: exceptions.py  receipts.py  states.py  ui_contracts.py
pms4u/governance-sdk/governance_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+115 files in other folders)
