[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-sdk"
version = "0.1.0"
authors = [
  { name="Governance Authority", email="authority@example.com" },
]
description = "Governance SDK Client for Stateless Execution Authority"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "requests"
]
